# llvm-project

bolt/docs/: GadgetScanner.md
bolt/include/bolt/Core/: BinaryFunction.h  MCPlusBuilder.h
bolt/include/bolt/GadgetScanner/: Utils.h
bolt/include/bolt/Passes/: DataflowAnalysis.h  DataflowInfoManager.h  DominatorAnalysis.h  FrameAnalysis.h  LivenessAnalysis.h  NonPacProtectedRetAnalysis.h  ReachingDefOrUse.h  ReachingInsns.h  StackAllocationAnalysis.h  (+4 more)
bolt/lib/: CMakeLists.txt
bolt/lib/Core/: BinaryContext.cpp  BinaryFunction.cpp  MCPlusBuilder.cpp  ParallelUtilities.cpp
bolt/lib/GadgetScanner/: CMakeLists.txt  Utils.cpp
bolt/lib/Passes/: BinaryPasses.cpp  CMakeLists.txt  DataflowAnalysis.cpp  DataflowInfoManager.cpp  FrameAnalysis.cpp  FrameOptimizer.cpp  NonPacProtectedRetAnalysis.cpp  ShrinkWrapping.cpp  StackAvailableExpressions.cpp  StackClashAnalysis.cpp  StackPointerTracking.cpp  ValidateInternalCalls.cpp
bolt/lib/Rewrite/: BinaryPassManager.cpp  RewriteInstance.cpp
bolt/lib/Utils/: CommandLineOpts.cpp
bolt/test/: CMakeLists.txt
bolt/test/RISCV/: call-annotations.s  relax.s  reloc-branch.s  reloc-jal.s
bolt/test/gadget-scanner/: cmdline-args.test  gs-pacret-autiasp.s  gs-pacret-multi-bb.s  gs-pacret-nocfg.s  gs-pacret-noreturn.s  gs-stackclash-libjose.s  gs-stackclash.s
bolt/tools/: CMakeLists.txt
bolt/tools/gadget-scanner/: CMakeLists.txt  gadget-scanner.cpp
bolt/utils/gadget-scanner-utils/: check_lib64_pacret.sh  count_instructions.sh  measure_lib_nr_instructions.sh  parse_libc64_out.py  readme.md
llvm/docs/: Security.rst
(+2 files in other folders)
